--- a/src/LocusImperiumApp/app/src/main/res/layout/activity_connect.xml
+++ b/src/LocusImperiumApp/app/src/main/res/layout/activity_connect.xml
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="0.094" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/textInputEditText"
+        android:id="@+id/inputIPAddress"
         android:layout_width="320dp"
         android:layout_height="49dp"
         android:hint="@string/EnterIpBox"
@@ -88,4 +88,19 @@
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toEndOf="@+id/mainButton"
         app:srcCompat="@drawable/connectactivityicon" />
+
+    <Button
+        android:id="@+id/saveIP"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="153dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="167dp"
+        android:layout_marginBottom="296dp"
+        android:text="@string/saveip"
+        app:layout_constraintBottom_toTopOf="@+id/purpBarBackground"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/inputIPAddress"
+        tools:text="@string/saveip" />
 </androidx.constraintlayout.widget.ConstraintLayout>
