Added the functionality needed to reconnect with the new IP #47
Its now possible to reconnect with the new IP.

missed in previous commit to add the possibillity to add dots when typing the IP address that has been fixed aswell.

--- a/src/LocusImperiumApp/app/src/main/res/layout/activity_connect.xml
+++ b/src/LocusImperiumApp/app/src/main/res/layout/activity_connect.xml
@@ -24,6 +24,7 @@
         android:layout_height="49dp"
         android:hint="@string/EnterIpBox"
         android:textAlignment="center"
+        android:digits="0123456789."
         android:inputType="number"
         android:singleLine="true"
         app:layout_constraintBottom_toBottomOf="parent"
