--- a/src/LocusImperiumApp/app/src/main/res/layout/activity_connect.xml
+++ b/src/LocusImperiumApp/app/src/main/res/layout/activity_connect.xml
@@ -1,109 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:id="@+id/connect"
-    tools:context=".ConnectActivity">
+    tools:context=".ConnectActivity"
+    android:backgroundTint="@color/black"
+    android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="209dp"
-        android:layout_height="75dp"
-        android:text="@string/enterIPText"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.094" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/inputIPAddress"
-        android:layout_width="320dp"
-        android:layout_height="49dp"
-        android:hint="@string/EnterIpBox"
-        android:textAlignment="center"
-        android:digits="0123456789."
-        android:inputType="number"
-        android:singleLine="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.13" />
-
-    <ImageView
-        android:id="@+id/purpBarBackground"
-        android:layout_width="421dp"
-        android:layout_height="110dp"
-        android:adjustViewBounds="true"
-        android:contentDescription="@string/purpleBackground"
-        android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/purpbackground" />
-
-    <ImageButton
-        android:id="@+id/settingsButton"
-        android:layout_width="95dp"
-        android:layout_height="77dp"
-        android:background="@null"
-        android:contentDescription="@string/settinIcon"
-        android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.091"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.961"
-        app:srcCompat="@drawable/settingactivityicon" />
-
-
-    <ImageButton
-        android:id="@+id/mainButton"
-        android:layout_width="95dp"
-        android:layout_height="77dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginBottom="24dp"
-        android:background="@null"
-        android:contentDescription="@string/mainIcon"
-        android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/settingsButton"
-        app:srcCompat="@drawable/mainactivityicon" />
-
-    <ImageButton
-        android:id="@+id/connectButton"
-        android:layout_width="77dp"
-        android:layout_height="77dp"
-        android:layout_marginBottom="24dp"
-        android:background="@null"
-        android:contentDescription="@string/connectIcon"
-        android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toEndOf="@+id/mainButton"
-        app:srcCompat="@drawable/connectactivityicon" />
-
-    <Button
-        android:id="@+id/saveIP"
-        android:layout_width="wrap_content"
+        android:id="@+id/room_data_textview"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="153dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="167dp"
-        android:layout_marginBottom="296dp"
-        android:text="@string/saveip"
-        app:layout_constraintBottom_toTopOf="@+id/purpBarBackground"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputIPAddress"
-        tools:text="@string/saveip" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_marginTop="30dp"
+        android:fontFamily="@font/roboto_bold"
+        android:gravity="center_horizontal"
+        android:text="Connect"
+        android:textColor="@color/white"
+        android:textSize="30sp" />
+
+    <com.google.android.material.divider.MaterialDivider
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_anchor="@id/room_data_textview"
+        app:layout_anchorGravity="bottom"
+        android:layout_marginTop="80dp"
+        app:dividerInsetStart="16dp"
+        app:dividerInsetEnd="16dp"
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp"
+        app:layout_anchor="@id/divider"
+        android:layout_gravity="bottom"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="IP Address of the Imperium Device">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:id="@+id/inputIPAddress"
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <Button
+            android:id="@+id/saveIP"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Connect"
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
+            android:backgroundTint="@color/colorPrimaryDark"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            />
+
+    </LinearLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_gravity="bottom"
+        android:background="@color/colorPrimaryDark"
+        android:backgroundTint="@color/colorPrimaryDark"
+        app:itemIconSize="30dp"
+        app:labelVisibilityMode="unlabeled"
+
+        app:menu="@menu/bottom_menu" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
