--- a/src/LocusImperiumApp/app/src/main/res/layout/activity_settings.xml
+++ b/src/LocusImperiumApp/app/src/main/res/layout/activity_settings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -14,17 +14,19 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="30dp"
-        android:padding="16dp"
         android:layout_gravity="top"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:orientation="vertical"
+        android:padding="16dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="80dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/loudness_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:fontFamily="@font/poppins_medium"
             android:gravity="left"
             android:text="Loudness limit"
@@ -35,9 +37,8 @@
             android:id="@+id/loudnessMenu"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:layout_marginTop="3dp"
-            >
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp">
 
             <AutoCompleteTextView
                 android:id="@+id/autoCompleteTextView"
@@ -51,16 +52,15 @@
             android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_anchor="@id/room_data_textview"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="7dp"
             app:dividerColor="@color/colorPrimary"
-            />
+            app:layout_anchor="@id/room_data_textview" />
 
         <TextView
             android:id="@+id/people_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/poppins_medium"
             android:gravity="left"
             android:text="Limit of people in the room"
@@ -70,16 +70,15 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/inputPeopleBox"
             android:layout_width="match_parent"
-            android:layout_marginTop="3dp"
-            android:layout_height="55dp"
-            >
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/inputPeople"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:inputType="number"
                 android:hint="Number of People"
+                android:inputType="number"
                 android:selectAllOnFocus="false"
                 android:singleLine="true" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -88,16 +87,15 @@
             android:id="@+id/divider2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_anchor="@id/room_data_textview"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="7dp"
             app:dividerColor="@color/colorPrimary"
-            />
+            app:layout_anchor="@id/room_data_textview" />
 
         <TextView
             android:id="@+id/humidity_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/poppins_medium"
             android:gravity="left"
             android:text="Maximum humidity"
@@ -107,16 +105,16 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/inputHumidityBox"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
-            android:layout_height="55dp"
             app:layout_constraintVertical_bias="0.0">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/inputHumidity"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:inputType="number"
                 android:hint="Humidity Percentage"
+                android:inputType="number"
                 android:singleLine="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -124,16 +122,15 @@
             android:id="@+id/divider3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_anchor="@id/room_data_textview"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="7dp"
             app:dividerColor="@color/colorPrimary"
-            />
+            app:layout_anchor="@id/room_data_textview" />
 
         <TextView
             android:id="@+id/temperature_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/poppins_medium"
             android:gravity="left"
             android:text="Maximum temperature"
@@ -143,16 +140,15 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/inputTempBox"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:layout_marginTop="3dp"
-            >
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/inputTemp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:inputType="number"
                 android:hint="Temperature"
+                android:inputType="number"
                 android:singleLine="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -160,23 +156,22 @@
             android:id="@+id/divider4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_anchor="@id/room_data_textview"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="7dp"
             app:dividerColor="@color/colorPrimary"
-            />
+            app:layout_anchor="@id/room_data_textview" />
 
         <Button
             android:id="@+id/savebutton"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/string"
-            android:textSize="18sp"
+            android:layout_gravity="bottom|center"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
             android:fontFamily="@font/roboto_bold"
             android:paddingLeft="60dp"
             android:paddingRight="60dp"
-            />
+            android:text="@string/string"
+            android:textSize="18sp" />
 
     </LinearLayout>
 
@@ -190,9 +185,9 @@
         android:backgroundTint="@color/colorPrimaryDark"
         app:itemIconSize="30dp"
         app:labelVisibilityMode="unlabeled"
-
+        app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/bottom_menu" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
 
