--- a/src/LocusImperiumApp/app/src/main/res/layout/activity_main.xml
+++ b/src/LocusImperiumApp/app/src/main/res/layout/activity_main.xml
@@ -64,15 +64,15 @@
                 android:gravity="center">
 
                 <Button
+                    android:id="@+id/decreasePeople"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="-"
                     android:layout_margin="5dp"
-                    android:textColor="@color/white"
-                    android:textSize="23sp"
                     android:background="@drawable/button_shape"
                     android:backgroundTint="@color/colorPrimaryDark"
-                    />
+                    android:text="-"
+                    android:textColor="@color/white"
+                    android:textSize="23sp" />
                 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -100,15 +100,15 @@
                 </LinearLayout>
 
                 <Button
+                    android:id="@+id/increasePeople"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="+"
                     android:layout_margin="5dp"
-                    android:textColor="@color/white"
-                    android:textSize="23sp"
                     android:background="@drawable/button_shape"
                     android:backgroundTint="@color/colorPrimaryDark"
-                    />
+                    android:text="+"
+                    android:textColor="@color/white"
+                    android:textSize="23sp" />
             </LinearLayout>
 
         </com.google.android.material.card.MaterialCardView>
