--- a/src/LocusImperiumApp/app/src/main/res/layout/activity_main.xml
+++ b/src/LocusImperiumApp/app/src/main/res/layout/activity_main.xml
@@ -93,7 +93,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_medium"
                     android:textSize="25sp"
-                    android:text=" "
+                    android:text="0"
                     android:padding="10dp"
                     android:gravity="center"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
